Bug 116001 - Incorrect Colors in Chart Wall Area w/ 3D Look and Extruded Shapes
Summary: Incorrect Colors in Chart Wall Area w/ 3D Look and Extruded Shapes
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
: 116180 (view as bug list)
Depends on:
Blocks: Chart
  Show dependency treegraph
 
Reported: 2018-02-25 09:02 UTC by Luke
Modified: 2018-03-07 15:05 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Example XLSX Chart with wall color problem (15.43 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2018-02-25 09:02 UTC, Luke
Details
Example native ODS Chart with wall color problem (7.50 KB, application/vnd.oasis.opendocument.spreadsheet)
2018-02-26 04:48 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2018-02-25 09:02:04 UTC
Created attachment 140126 [details]
Example XLSX Chart with wall color problem

Steps to reproduce:
1. Open ChartBackgroundBug.xlsx in Calc and Excel
2. Compare

The Chart Wall should be white(automatic), but it's being imported as blackish.

Version: 6.1.0.0.alpha0+ Build ID: 60ae5f530c3123341a8c2d49793693c2cd4521c2
Good

Version: 6.1.0.0.alpha0+ Build ID: ea360461746f37be021b63da7a64a60d0f3c4af4
BAD

Tested with Arch Linux and Windows 10.
Comment 1 raal 2018-02-25 22:34:34 UTC
confirm. Version: 6.1.0.0.alpha0+
Build ID: e1771058ebc4efc58515ffa60250843274990bac
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk3;
Comment 2 Luke 2018-02-26 03:19:07 UTC
Noel Grandin,

I bisected this issue down to:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=b10c7022f1be6e4825269bd5872575b5b53744ef

Use RawBitmap in BPixelRasterToBitmapEx

Could you please take a look at it?
Comment 3 Luke 2018-02-26 04:48:18 UTC
Created attachment 140145 [details]
Example native ODS Chart with wall color problem
Comment 4 Luke 2018-02-26 04:59:22 UTC
Steps to reproduce:

1. Create a column on numbers
2. Select column -> Insert -> Chart
3. Click '3D Look'
Comment 5 Xisco Faulí 2018-02-26 12:59:53 UTC
Adding Cc: to Noel Grandin
Comment 6 Commit Notification 2018-03-01 11:40:38 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3d400321910ff0fe89ab8c70c59432e676cb1340

tdf#116001 Incorrect Colors in Chart Wall Area

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Luke 2018-03-02 15:46:56 UTC
Noel Grandin,
Is this supposed to be closed as fixed? I can still reproduce it under both Arch and Windows with Version: 6.1.0.0.alpha0+
Build ID: 312c0abcff23a5bc7cf4442359ec48187ec06d48


Another way to trigger this bug is to draw a basic shape and extrude it to form a 3D shape.
Comment 8 Commit Notification 2018-03-05 10:09:51 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1e89b32c654b471f5fdce65d63d49cfcc90826b1

tdf#116001 Incorrect Colors in Chart Wall Area (2nd attempt)

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2018-03-05 16:40:44 UTC
*** Bug 116180 has been marked as a duplicate of this bug. ***
Comment 10 Laurent Balland 2018-03-05 21:50:12 UTC
I can confirm that bug 116180 is also fixed with up to date master.