tdf#116001 Incorrect Colors in Chart Wall Area (2nd attempt)

regression from

    commit b10c7022f1be6e4825269bd5872575b5b53744ef
    "use RawBitmap in BPixelRasterToBitmapEx"

fix attempt at fixing it in

    commit 3d400321910ff0fe89ab8c70c59432e676cb1340
    "tdf#116001 Incorrect Colors in Chart Wall Area"

was incomplete. the drawinglayer code was (a) not initialising the
background transparency on all pixels and (b) not calling the Color
constructor correctly.

Change-Id: I1cf7d7d5eb67ba472e17790b18c33d8e4b97ae4c